--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -1,7 +1,9 @@
 
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@500&display=swap');
+
 :root {
     --primary-color: #1D3557;
-    --second-color: #A8DADC;
+    --secondary-color: #A8DADC;
     --accent1-color: #F1FAEE;
     --accent2-color: #E63946;
 
