--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,7 +8,7 @@ style {
     --accent1-color: #F1FAEE;
     --accent2-color: #E63946;
 
-    --heading-font: 'Roboto', medium;
+    --heading-font: 'Roboto', sans-serif;
     --paragraph-font: 'Open Sans', sans-serif;
 
     --nav-background-color: #F1FAEE;
