--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -8,8 +8,8 @@ style {
     --accent1-color: #F1FAEE;
     --accent2-color: #E63946;
 
-    --heading-font: 'Roboto', medium;
-    --paragraph-font: 'Open Sans', sans-serif;
+    --heading-font: 'Roboto', serif;
+    --paragraph-font: 'Open Sans', serif;
 
     --nav-background-color: #F1FAEE;
     --nav-link-color: #1D3557;
