--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -147,20 +147,23 @@ p {
     
 }
 
-.history p {
+.first-p {
     display: flex;
     align-items: center;
-    padding: 5px;
     text-align: left;
     grid-area: 2/1;
+    padding: 0px;
+    margin: 0px;
 }
 
-.history p2 {
+.second-p {
     display: flex;
     align-items: center;
-    padding: 5px;
+    padding: 0px;
     text-align: left;
     grid-area: 2/3;
+    margin: 0px;
+
 }
 
 .history img {
