--- a/week05/styles/poll-form.css
+++ b/week05/styles/poll-form.css
@@ -1,39 +1,84 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Roboto:wght@500&display=swap');
 
-h1{
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  ;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+body{
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  ;
+
+  font-size: 1.2em;
+  color: #333;
+  background: #fff;
+}
+
+header{
+  margin: 0 auto;
+  width: 500px;
+}
+
+h1{
+  margin: 1rem;
+  font-size: 1.5em;
+  color: #328133;
+  text-align: center;
+}
 
 form{
     width: 500px;
+    margin: 0 auto;
+    padding: 1rem;
     text-align: center;
-    border-radius: 20px;
-    background-color: rgb(206, 216, 255);
     border: 1px solid;
-    border-color: rgb(22, 27, 27);
+    border-radius: 20px;
+    background-color: rgb(152, 172, 253);
+    border-color: rgb(230, 176, 134);
+    display: grid;
+}
+
+fieldset{
+  display: grid;
+  grid-gap: .5rem;
+  padding: 1rem;
+  margin: 6px;
+  border: 3px solid #f5fbbd;
+  border-radius: 10px;
+}
+
+legend{
+  padding: 0.5rem;
+  font: bold 1.3em Roboto;
+  color: #328133;
+
+}
+
+label{
+  text-align: right;
+  padding-right: 1rem;
+  font-size: 15px;
 }
 
 button,
 input,
 select,
 textarea {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  ;
+  font-family: Roboto, Arial;
+  font-size: 90%;
 
-  font-size: 100%;
-  width: 180px;
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
 }
 
 input, 
 textarea, 
 select {
-    border-radius: 10px;
-    color: rgb(62, 61, 60);
-    text-align: center;
+  padding: 0.5rem;
+  font-size: 1.1rem;
+  border-radius: 15px;
+  color: rgb(62, 61, 60);
+  text-align: center;
+  background-color: #f5fbbd;
 }
 
 input:focus,
@@ -43,7 +88,67 @@ select:focus {
   border-radius: 10px;
 }
 
-legend {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif  ;
+input[type="checkbox"]{
+  width: 22px;
+  height: 22px;
+  vertical-align: bottom;
 
+}
+
+textarea { 
+  padding: 10px;
+  width: 100%;
+  height: 90%;
+  max-width: 100%;
+  border-right: 1px solid;
+  resize: vertical;
+  /* overflow:; */
+}
+.textarea-label{
+  text-align: left;
+  margin-left: 34px;
+}
+
+
+button {
+  margin: 1rem;
+  padding: .75rem;
+  font: bold 1.2rem Roboto;
+  /* border: 2px solid  rgb(22, 27, 27); */
+  border: none;
+  border-radius: 1rem;
+  background-color:#328133;
+  cursor: pointer;
+}
+
+button:hover,
+button:focus {
+  background: #a0eda1;
+  color: rgb(22, 27, 27);
+
+}
+
+footer{
+  margin: 1rem auto 0;
+  width: 500px;
+  text-align: center;
+  font-size: 0.8em;
+  color: #777;
+  border-top: 1px solid #ccc;
+}
+
+.form-item{
+  display: grid;
+  align-items: center;
+}
+
+.column1{
+  display: grid;
+  grid-template-columns: 1.5fr 1fr;
+  margin: 0.5rem 0;
+}
+
+.column2{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
 }
