--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -397,9 +397,14 @@ button:focus {
 /* -------------- Trips Page ------------- */
 
 .trip-invitation{
-    margin: 20px;
-    padding: 10px;
+    margin-top: 20px;
+    padding: 8px;
     text-align: center;
+}
+
+.trip-invitation p{
+    margin-left: 100px;
+    margin-right: 100px;
 }
 
 /* ----- Reservation button----- */
@@ -408,9 +413,14 @@ button:focus {
     text-decoration: none;
 }
 
+.reservation{
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
 
-.reservation {
-    display: grid;
+.reservation a{
     margin: 20px;
     width: 220px;
     padding: 25px;
@@ -418,9 +428,6 @@ button:focus {
     border-radius: 50px;
     background-color: var(--accent2-color);
     box-shadow: 0 0 10px var(--primary-color);
-    /* align-items: center;
-    justify-content: center;
-    text-align: center; */
 }
 
 .reservation a{
@@ -428,12 +435,12 @@ button:focus {
     color: var(--accent1-color);
 }
 
-.reservation:hover,
-.reservation:focus{
+.reservation a:hover,
+.reservation a:focus{
     background: var(--secondary-color);
-    color: var(--primary-color-color);
+    color: var(--accent1-color);
     box-shadow: none;
-    text-shadow: 0 0 3px var(--primary-color);
+    text-shadow: 0 0 4px var(--primary-color);
 }
 
 
