--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -228,9 +228,16 @@ footer a{
     text-decoration: none;
 }
 
+footer a:hover,
+footer a:focus{
+    color: var(--accent2-color);
+
+}
+
 footer img {
     padding: 10px;
 }
+
 
 
 /*------------------------------------------------*/
