--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -489,6 +489,7 @@ button:focus {
 }
 
 .description{
+    width: 500px;
     padding-bottom: 15px;
 
 }
@@ -542,6 +543,7 @@ button:focus {
 .adventures-1row{
     margin: 20px;
     display: grid;
+    /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
     grid-template-columns: 300px 300px 300px;
     text-align: center;
     justify-content: center;
@@ -551,6 +553,7 @@ button:focus {
 .adventures-2row{
     margin: 20px;
     display: grid;
+    /* grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); */
     grid-template-columns: 300px 300px;
     text-align: center;
     justify-content: center;
@@ -561,10 +564,15 @@ button:focus {
 
 .adventure-option{
     margin: 5px;
-    width: 200fr;
+    width: ;
     padding-bottom: 15px;
     padding-top: 15px;
     border-radius: 30px;
+}
+
+.adventure-option h3{
+    margin-top: 15px;
+    padding: 5px;
 }
 
 .adventure-option:hover,
