--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -527,7 +527,7 @@ button:focus {
 }
 
 
-/* ----- Adventures----- */
+/* ----- Adventures------ */
 
 .adventures-section{
     margin-bottom: 100px;
